# slice

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: flake.yaml  pytest.yml  python-app.yml  test_application_1.yml
src/slice/: slice.py
tests/: test_slice.py
