[tool.poetry]
name = "slice"
version = "0.1.0"
description = "Library that enables the calculation of important metrics for the creation of a sound evaluation of an NLP system"
authors = ["Sebmenke <smenke@savanamed.com>"]
license = "MIT"
packages = [
    { include = "src" },
]
[tool.poetry.dependencies]
python = "^3.8"
statsmodels = "^0.12.2"
argparse = "^1.4.0"
columnar = "^1.3.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

