[tool.poetry]
name = "slice"
version = "0.1.0"
description = "Library that enables the calculation of the gold standard's sample sizes for a sound NLP system evaluation"
authors = ["Sebmenke <smenke@savanamed.com>"]
license = "MIT"
packages = [
    { include = "src" },
]
[tool.poetry.dependencies]
python = "^3.9"
statsmodels = "^0.12.2"
argparse = "^1.4.0"
columnar = "^1.3.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

